Fixed button text - text align center

--- a/src/components/common/Btn.css
+++ b/src/components/common/Btn.css
@@ -8,6 +8,7 @@ button, .btn {
     font-size: 0.8rem;
     font-weight: bold;
     line-height: 22px;
+    text-align: center;
     text-decoration: none;
 }
 
